editted questionnaire pdf files

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -142,7 +142,7 @@ Valence as often used in psychology particularly in study of emotions, means the
 
 In this work, both the categorical and dimensional approaches are used for developed models. The model developed for capturing emotional state responses is coupled with gathered subjective emotional experiences of our participants based on a categorical approach. Using categorical approach when collecting emotional experiences subjectively is the most practical method, as it is far easier for participants to communicate in a language that they can understand (emotional categories rather than the degree of arousal or valence) to describe their emotional state best. However although we did not want to use a data collection process that require the participants to learn new terminologies and describe their emotional estate with unfamiliar terms, participants have been introduced to arousal, valence and dominance. Given example emotions for different levels of these variables participants tried to describe their affect state by choosing images based on these concepts. The developed model for the affect space uses the dimensional model as in Figure ~\ref{fig:russel-av-space} to provide a mapping between the original emotional categories and a dimensional space. These models are further elaborated in Chapter ~\ref{chap:impl}.
 
-~\cite{picard2003affective}
+ ~\cite{picard2003affective}
 
 p There are many different emotional indicators that have been studied to determine affect including facial expressions, gestures, postures, vocal intonation, language, pressure, and pupil dilation [45]. These are all visible features that can be observed by others through day-to-day interactions. For example, in human-to-human interactions, facial expression can help us to determine whether someone is distracted, frustrated, or happy just through facial expression. Some researchers have used sophisticated face-tracking software to analyze facial expressions to infer the emotional state of the user [11,44]. Work by Khan et al. [31] extended this idea but used thermal imaging to identify changes of blood flow patterns in the face that correspond to different facial expressions. 
 
@@ -484,12 +484,14 @@ Environment modes
 \uofsappendix
 \chapter{Transforming physiological variables into arousal-valence space} \label{app:phys-to-av}    \input{content/app-phys-to-av.tex}
 \chapter{Transforming arousal-valence space into emotional states}        \label{app:av-to-emotion} \input{content/app-av-to-emotion.tex}
-\chapter{Demographics Questionnaire}                                      \label{app:q-dmg}         \includepdf[pages={-}]{content/q-dmg.pdf}
-\chapter{Condition Questionnaire}                                         \label{app:q-cnd}         \includepdf[pages={-}]{content/q-cnd.pdf}
-\chapter{Self-Assessment-Manikin Arousal Scales Questionnaire}            \label{app:q-sam}         \includepdf[pages={-}]{content/q-sam.pdf}
-\chapter{Intrinsic Motivation Inventory Questionnaire}                    \label{app:q-ini}         \includepdf[pages={-}]{content/q-imi.pdf}
-\chapter{Player Experience of Need Satisfaction Questionnaire}            \label{app:q-pens}        \includepdf[pages={-}]{content/q-pens.pdf}
-\chapter{Game Engagement Questionnaire}                                   \label{app:q-geq}         \includepdf[pages={-}]{content/q-geq.pdf}
+\chapter{Demographics Questionnaire}                                      \label{app:q-dmg}         \box{\includegraphics[page=1]{content/q-dmg.pdf}}
+                                                                                                    \includepdf[pages={2}]{content/q-dmg.pdf}
+                                                                                                    \box{\includegraphics[page=3]{content/q-dmg.pdf}}
+\chapter{Condition Questionnaire}                                         \label{app:q-cnd}         \box{\includegraphics[page=1]{content/q-cnd.pdf}}
+\chapter{Self-Assessment-Manikin Arousal Scales Questionnaire}            \label{app:q-sam}         \box{\includegraphics[page=1]{content/q-sam.pdf}}
+\chapter{Intrinsic Motivation Inventory Questionnaire}                    \label{app:q-ini}         \box{\includegraphics[page=1]{content/q-imi.pdf}}
+\chapter{Player Experience of Need Satisfaction Questionnaire}            \label{app:q-pens}        \box{\includegraphics[page=1]{content/q-pens.pdf}}
+\chapter{Game Engagement Questionnaire}                                   \label{app:q-geq}         \box{\includegraphics[page=1]{content/q-geq.pdf}}
 
 %------------------------------------------------------------------------------
 
