working on chapter 2

--- a/thesis/content/bibliography.bib
+++ b/thesis/content/bibliography.bib
@@ -306,3 +306,52 @@
   year={1986},
   publisher={Cambridge University Press}
 }
+@article{partala2006real,
+  title={Real-time estimation of emotional experiences from facial expressions},
+  author={Partala, Timo and Surakka, Veikko and Vanhala, Toni},
+  journal={Interacting with Computers},
+  volume={18},
+  number={2},
+  pages={208--226},
+  year={2006},
+  publisher={Oxford University Press}
+}
+@inproceedings{sebe2006emotion,
+  title={Emotion recognition based on joint visual and audio cues},
+  author={Sebe, Nicu and Cohen, Ira and Gevers, Theo and Huang, Thomas S},
+  booktitle={Pattern Recognition, 2006. ICPR 2006. 18th International Conference on},
+  volume={1},
+  pages={1136--1139},
+  year={2006},
+  organization={IEEE}
+}
+@article{khan2006automated,
+  title={Automated facial expression classification and affect interpretation using infrared measurement of facial skin temperature variations},
+  author={Khan, Masood Mehmood and Ingleby, Michael and Ward, Robert D},
+  journal={ACM Transactions on Autonomous and Adaptive Systems (TAAS)},
+  volume={1},
+  number={1},
+  pages={91--113},
+  year={2006},
+  publisher={ACM}
+}
+@article{takano2007heart,
+  title={Heart rate measurement based on a time-lapse image},
+  author={Takano, Chihiro and Ohta, Yuji},
+  journal={Medical engineering \& physics},
+  volume={29},
+  number={8},
+  pages={853--857},
+  year={2007},
+  publisher={Elsevier}
+}
+@article{ekman1983autonomic,
+  title={Autonomic nervous system activity distinguishes among emotions},
+  author={Ekman, Paul and Levenson, Robert W and Friesen, Wallace V},
+  journal={Science},
+  volume={221},
+  number={4616},
+  pages={1208--1210},
+  year={1983},
+  publisher={American Association for the Advancement of Science}
+}
